# Technopark

Algorithms/: algorithms.cpp
Algorithms/HW1/: task1  task1.cpp  task2  task2.cpp
Algorithms/HW1/task_1/: a.out  main.cpp
Algorithms/HW1/task_2/: main.cpp
Algorithms/HW1/task_3/: a.out  main.cpp
Algorithms/HW1/task_4/: a.out  main  main.cpp
Algorithms/HW1/task_4.1/: main  main.cpp
Algorithms/HW1/task_5/: a.out  main  main.cpp
Algorithms/HW1/task_6/: a.out  main  main.cpp
Algorithms/HW1/task_7/: main  main.cpp  main2
Cxx/HW2/: CI.yml  CMakeLists.txt  README.md
Cxx/HW2/project/headers/: kMeans.h
Cxx/HW2/project/src/: kMeansD.c  kMeansS.c  main.c
Cxx/HW2/test/: tests.cpp
Cxx/Project/: CMakeLists.txt  async.http.client.cpp  async.http.server.h  connection.cpp  connection.h  server.cpp
